<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.gk</groupId>
        <artifactId>framework</artifactId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>iam</artifactId>
    <name>iam</name>
    <description>Identity and access management</description>

    <properties>
        <java.version>21</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.gk</groupId>
            <artifactId>infra</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.gk</groupId>
            <artifactId>meta</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>
</project>
